--- a/css/style.css
+++ b/css/style.css
@@ -635,9 +635,9 @@ input[type='submit']{
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
 }
-.footer-container :not(textarea){
+/* .footer-container :not(textarea){
     border-radius: 35px;
-}
+} */
 textarea{
     border-radius: 20px;
 }
@@ -707,14 +707,14 @@ input[type='checkbox']{
     z-index: 2;
 }
 .box .square:nth-child(3){
-    top: 290px;
+    top: 180px;
     right: -60px;
     width: 80px;
     height: 80px;
     z-index: 2;
 }
 .box .square:nth-child(4){
-    top: 450px;
+    top: 250px;
     left: 100px;
     width: 50px;
     height: 50px;
@@ -787,4 +787,17 @@ form{
 }
 #email-table{
     border-collapse: collapse;
+}
+.footer-container td{
+    border-bottom: none;
+    padding-right: 20px;
+}
+.footer-container a{
+    color: var(--menu-color);
+}
+[class*='viber']{
+    color: rgb(161, 2, 161);
+}
+[class*='skype']{
+    color: lightblue;
 }
