--- a/css/style.css
+++ b/css/style.css
@@ -714,7 +714,7 @@ input[type='checkbox']{
     z-index: 2;
 }
 .box .square:nth-child(4){
-    top: 250px;
+    top: 280px;
     left: 100px;
     width: 50px;
     height: 50px;
@@ -800,4 +800,7 @@ form{
 }
 [class*='skype']{
     color: lightblue;
+}
+[class*='whatsapp']{
+    color: rgb(49, 247, 49);
 }
